--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -521,7 +521,15 @@ pig to run the test suite.</p>
     Americans.  <code>8^)</code>
     </ul>
 
-<p>This procedure does the trick:</p>
+<p>First, you must supplement the command-line in the
+<code>bpmake</code> script with these extra arguments:</p>
+
+<pre>
+'BOOT_CFLAGS="$CFLAGS"' 'BOOT_LDFLAGS="$LDFLAGS"'
+'SYSTEM_HEADER_DIR="$glibc_dir/include"'
+</pre>
+
+<p>With that done, this procedure does the trick:</p>
 
 <pre>
 $ ubpenv ./configure --enable-languages=c
