--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -65,7 +65,7 @@ includes ...</p>
     (Bounded pointers are also returned by memory allocators such as
     <code>malloc</code>, but that's implemented by the allocator library.)
     <li>propagation of bounds via pointer assignment,
-    passing of function argument and and return of function value.
+    passing of function argument and return of function value.
     <li>programmer control over boundedness of pointer types via new qualifiers
     ``<code>__bounded</code>'' and ``<code>__unbounded</code>,'' and
     access to the components of a bounded pointer via new prefix operators
