--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -92,6 +92,19 @@ eventually be incorporated into GCC.  If you can use Greg's fat
 pointer bounds checker, it has the advantage of better run-time
 performance and support for languages other than C.</p>
 
+<h2>
+<a href="http://www.immunix.org/stackguard.html">StackGuard</a></h2>
+
+<p>StackGuard emits programs hardened against "stack smashing" attacks on
+x86 GNU/Linux. StackGuard 2.0 is based on egcs-1.1.2 (gcc version 2.91.66);
+StackGuard 1.21 is based on gcc-2.7.2.</p>
+
+<h2><a href="http://www.cacheprof.org">Cacheprof</a></h2>
+
+<p>An open-source tool for investigating cache effects in programs
+(on x86 GNU/Linux, though possibly portable to other x86 POSIX targets).
+</p>
+
 <hr>
 
 <h1>GCC Museum</h1>
