--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -61,6 +61,9 @@ have been left out or some of your contributions are not listed.
 Please keep this list in alphabetical order.
 <p>
 <ul>
+<li>Godmar Back for his improvements and encouragement.
+<li>Scott Bambrough for help porting the compiler.
+<li>Jon Beniston for his Win32 port.
 <li>Geoff Berry for his object serialization work and various patches.
 <li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>,
 IA-64 libffi port, and other work.
@@ -72,7 +75,8 @@ IA-64 libffi port, and other work.
 <li>Steve Chamberlain for config fixes and the picoJava port.
 <li>John-Marc Chandonia for various library patches.
 <li>Eric Christopher for his porting help and clean-ups.
-<li>Mo DeJong for bug fixes
+<li>The <a href="http://www.classpath.org">GNU Classpath project</a> for all of their merged runtime code.
+<li>Mo DeJong for gcj and libgcj bug fixes.
 <li>Ivan Fontes Garcia for the Portugese translation of the FAQ.
 <li>The GCC project <a
 href="http://gcc.cygnus.com/thanks.html">contributors</a> for all of their
@@ -80,8 +84,10 @@ great compiler work.
 <li>Anthony Green for various contributions.
 <li>Stu Grossman for gdb hacking, allowing us to debug our code.
 <li>Andrew Haley for his amazing compiler and library efforts.
-<li>Bryce McKinlay for numerous libgcj fixes and improvements.
-<li>Jason Molenda for maintaining the project infrastructure on
+<li>Jakub Jelinek for improving the build system.
+<li>Oskar Liljeblad for hacking on AWT and his many bug reports and patches.
+<li>Bryce McKinlay for numerous gcj and libgcj fixes and improvements.
+<li>Jason Molenda for establishing the project infrastructure on
 <a href="http://sources.redhat.com">sources.redhat.com</a>.
 <li>Mike Moreton for his various patches.
 <li>Alexandre Oliva for all of this porting and testing efforts.
@@ -90,7 +96,10 @@ great compiler work.
 <li>All of the Mauve project <a href="/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
 <li>Rainer Orth for configuration clean-ups and porting help.
 <li>Alexandre Petit-Bianco for implementing much of the compiler, and continued maintainership.
+<li>Rolf W. Rasmussen for hacking on AWT.
 <li>Bradley Schatz for his work on the FAQ.
+<li>Jason Schroeder for jcf-dump patches.
+<li>John Stracke for his HTTP protocol fixes.
 <li>Jeff Sturm for porting help, bug fixes, and encouragement.
 <li>Tom Tromey for his many contributions and libgcj maintainership.
 <li>Matt Welsh for help with Linux Threads.
@@ -103,23 +112,32 @@ in testing GCJ:
 
 <ul>
 <li>Michael Abd-El-Malek
+<li>Thomas Arend
 <li>Bonzo Armstrong
 <li>Steven Ashe
 <li>Chris Baldwin
 <li>David Billinghurst
 <li>Jim Blandy
 <li>Stephane Bortzmeyer
+<li>Frank Braun
+<li>Sidney Cadot
 <li>Bradford Castalia
 <li>Ralph Doncaster
 <li>Richard Emberson
+<li>Graham Fawcett
+<li>Robert A. French
 <li>Mark K. Gardner
-<li>Charles Gauthier
+<li>Charles-Antoine Gauthier
 <li>Simon Gornall
+<li>Fred Gray
 <li>John Griffin
+<li>Phil Hargett
+<li>Bryan W. Headley
 <li>Kevin B. Hendricks
 <li>Patrik Hagglund
 <li>Amancio Hasty 
 <li>Joep Jansen
+<li>David Kidd
 <li>Tobias Kuipers
 <li>Anand Krishnaswamy
 <li>Jesse Macnish
@@ -127,13 +145,19 @@ in testing GCJ:
 <li>Stefan Morrell
 <li>Pekka Nikander
 <li>Jon Olson
+<li>Magnus Persson
+<li>Chris Pollard
 <li>Paul Reilly
 <li>Tom Reilly
+<li>Torsten Rueger
 <li>Danny Sadinoff
 <li>Marc Schifer
 <li>Franz Sirl
+<li>Tim Souder
 <li>Adam Sulmicki
 <li>Frederik Warg
+<li>Gregory Warnes
+<li>Mark Wielaard
 <li>David E. Young
 </ul>
 
@@ -147,7 +171,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.10 2000/06/28 04:54:21 apbianco Exp $
+$Id: thanks.html,v 1.11 2000/07/05 06:08:24 kingdon Exp $
 </small>
 </address>
 
