* index.html: Mention happenings.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,17 @@ i
 <table>
 
 <tr><td valign="top">
+<b>August 20, 2000</b>
+</td><td>
+We haven't had any news in a while, but things have still been
+happening: Anthony Green recently merged in a lot of Classpath code,
+in particular the <tt>java.util.jar</tt> and
+<tt>java.security.cert</tt> packages.  Also, Bryce McKinlay and Rolf
+Rasmussen have done a fair amount of work on <tt>java.awt</tt> (not
+ready for a screen shot yet, though).
+</td></tr>
+
+<tr><td valign="top">
 <b>August 3, 2000</b>
 </td><td>
 Oskar Liljeblad has made the first release of
@@ -203,7 +214,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.44 2000/07/05 06:06:06 kingdon Exp $
+$Id: index.html,v 1.45 2000/08/03 15:56:06 tromey Exp $
 </small>
 </address>
 
