Update format checking status.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -244,7 +244,7 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em>additional <code>strftime</code> conversion specifiers</em></td>
-    <td>Library Issue</td><td></td><td></td><td>Missing</td>
+    <td>Library Issue</td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>deprecate <code>ungetc</code> at the<br>beginning of a binary file</em></td>
@@ -300,9 +300,9 @@ the hardware is perfectly compliant, but GCC does not define
 <code>__STDC_IEC_559__</code> or implement the associated standard
 pragmas.
 
-<li>Various aspects of the <code>printf</code>, <code>scanf</code> and
-<code>strftime</code> format checking aren't quite right for the different
-standards versions.
+<li>GCC doesn't yet have an internal notion of <code>intmax_t</code>,
+so at present gives spurious errors for <code>%j</code>
+<code>printf</code> and <code>scanf</code> formats.
 
 <li>Compiler support is needed for <code>math_errhandling</code>; see
 messages <a
