--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -30,6 +30,7 @@
 <A HREF="contribute.html">Contributing</A><BR>
 <A HREF="contributewhy.html">...Why?</A><BR>
 <A HREF="projects.html">Open projects</A><BR>
+<A HREF="frontends.html">Front-ends</A><BR>
 <A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
 <A HREF="cvswrite.html">CVS write access</A><BR>
