--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -26,7 +26,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>France (Brittany, releases only, no snapshots): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs.cygwin.com/gcc/">ftp.irisa.fr</a>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a>
-<LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
+<LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
 <LI>Germany (releases only, no snapshots): <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
 <LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a>
