* build-snapshot.html: Add instructions for building from CVS.     Add reminder to build c++ compiler. Mention __dso_handle problem.     * download.html: Mention prebuild RPMs more prominently. Add pointers     for building from source and to gcc cvs access instructions. Add an     entry describing the gcj/libgcj combination that worked for me.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -89,8 +89,8 @@ ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz
 </table>
 <br>
 
-The latest development sources are available in two forms: periodic
-snapshots, and directly from the cvs source repository.
+The latest development sources are available in three forms: periodic
+snapshots, prebuild RPMs and directly from the cvs source repository.
 
 <p>
 Note that the current development sources are generally for
@@ -100,6 +100,8 @@ sources may have bugs which prevent it from compiling or running;
 however, these things should be fixed immediately. Please
 <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">submit a problem report</a> if you are
 using the development sources and run into such a problem.
+If you are going to build from source you want to read the
+<a href=faq.html#3_0>Build Issues FAQ</a>.
 
 <p>
 <h3>Snapshots</h3>
@@ -110,10 +112,20 @@ Libgcj snapshots are made nightly, and are available from
 <a href="ftp://sources.redhat.com/pub/java/snapshot">ftp://sources.redhat.com/pub/java/snapshot</a>.
 
 <h3>RPM</h3>
-RPMs are made available occasionally.  The are available from
+RPMs are made available occasionally by Anthony Green.  The are available from
 <a href="ftp://sources.redhat.com/pub/java/rpm/">ftp://sources.redhat.com/pub/java/rpm/</a>.
 <p>
+Everything will install under /usr/local/ag.  The source RPM unpacks
+as a checked out anonymous source tree  with GCC and libgcj unified
+under a single root.    ftp access to sources is pretty tight, so
+you'll probably want to wait 'til it has propagated to the various
+<a href=http://sources.redhat.com/mirrors.html>Mirror Sites</a>.
+Debian users can use <code>alien --to-deb</code> to convert the rpms.
+<p>
+You have to add <code>/usr/local/ag/bin</code> to your <code>PATH</code>
+and add <code>/usr/local/ag/lib</code> to your <code>LD_LIBRARY_PATH</code>.
 
+<a name=cvs>
 <h3>cvs</h3> 
 The easiest way to get libgcj is to check it out from the
 anonymous cvs repository.  Here's how:
@@ -124,6 +136,9 @@ cvs -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java login
 cvs -z9 -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
 </pre>
 </small>
+<p>
+More information on anonymous read-only cvs access for gcc can be found on
+<a href=http://gcc.gnu.org/cvs.html>http://gcc.gnu.org/cvs.html</a>.
 
 <h3>cvsweb</h3>
 
@@ -175,7 +190,7 @@ GCJ Discussion mailing list</a> to report it. Thanks!
 <tr valign=top>
 <td>gcc-2.95.2 with <a href="http://waitaki.otago.ac.nz/~bryce/gcj/">patches from Bryce McKinlay</a></td>
 <td>libgcj from CVS from March 02, 2000 00:00:00
-(Newer versions may not work with gcc-2.95.2 due to later
+(Newer versions do not work with gcc-2.95.2 due to later
 changes to libgcj to support throw/catch in CNI.)
 </td>
 <td>Trying to use this to get gij/interpreter support with stable gcj.
@@ -199,6 +214,15 @@ for more details on downloading and using this release.</td>
 <td>March 21, 2000</td>
 </tr>
 
+<tr valign=top>
+<td>gcj from CVS from June 6, 2000</td>
+<td>libgcj from CVS from June 6, 2000</td>
+</td>
+<td>This combination supports compiling inner classes from java source.</td>
+<td><a href="mailto:mark@klomp.org">Mark Wielaard</a></td>
+<td>June 12, 2000</td>
+</tr>
+
 </table>
 
 
@@ -211,7 +235,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.10 2000/06/28 04:54:21 apbianco Exp $
+$Id: download.html,v 1.11 2000/07/05 06:07:19 kingdon Exp $
 </small>
 </address>
 
