Refer to thanks.html by specifying the gcc.gnu.org host.

--- a/htdocs/gcc-2.95/gcc-2.95.2.html
+++ b/htdocs/gcc-2.95/gcc-2.95.2.html
@@ -122,8 +122,8 @@ will update those pages as new information becomes available.
 
 <p> The GCC developers would like to thank the numerous people that
 have contributed new features, test results, bugfixes, etc to GCC.  This
-<a href="../thanks.html">amazing group of volunteers</a> is what makes GCC 
-successful.
+<a href="http://gcc.gnu.org/thanks.html">amazing group of volunteers</a> is
+what makes GCC successful.
 
 <p>And finally, we can't in good conscience fail to mention some
 <a href="caveats.html">caveats</a> to using GCC 2.95.2.
