--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,7 +14,7 @@
 <A HREF="gccmission.html">Mission Statement</A><BR>
 <A HREF="lists.html">Mailing lists</A><BR>
 <A HREF="releases.html#timeline">Timeline</A><BR>
-<A HREF="thanks.html">Contributors</A><BR>
+<A HREF="http://gcc.gnu.org/thanks.html">Contributors</A><BR>
 <A HREF="steering.html">Steering Committee</A><BR>
 </P>
 <H2>Docs</H2>
