--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -513,8 +513,9 @@ pig to run the test suite.</p>
     <code>texindex</code> don't link for lack of a BP version of
     <code>libz.a</code>.  We don't need <code>texinfo</code>, so
     we can just ignore it.
-    <li> <code>intl/libintl.a</code> conflicts with the <code>glibc</code>
-    implementation, so we must configure without NLS.
+    <li> GCC's <code>gettext</code> implementation in
+    <code>gcc/intl/libintl.a</code> conflicts with
+    <code>glibc</code>'s, so we must configure to ignore GCC's.
     </ul>
 
 <p>First, you must supplement the command-line in the
@@ -528,7 +529,7 @@ pig to run the test suite.</p>
 <p>With that done, this procedure does the trick:</p>
 
 <pre>
-$ ubpenv ./configure --disable-nls --enable-languages=c
+$ ubpenv ./configure --without-included-gettext --enable-languages=c
 $ bpmake all-libiberty
 $ bpmake -C gcc
 $ bpmake -C gcc stage1 bootstrap2
