* index.html: Mention AG's zlib change.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,14 @@ i
 <table>
 
 <tr><td valign="top">
+<b>September 6, 2000</b>
+</td><td>
+Anthony Green checked in a patch to make gcj read compressed zip
+files.  He also moved zlib into the gcc tree -- the first concrete
+work towards merging the gcc and libgcj source trees.
+</td></tr>
+
+<tr><td valign="top">
 <b>August 20, 2000</b>
 </td><td>
 We haven't had any news in a while, but things have still been
@@ -214,7 +222,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.45 2000/08/03 15:56:06 tromey Exp $
+$Id: index.html,v 1.46 2000/08/20 18:45:08 tromey Exp $
 </small>
 </address>
 
