* index.html: Added note about increased serialization compatibility.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,14 @@ i
 <table>
 
 <tr><td valign="top">
+<b>September 8, 2000</b>
+</td><td>
+Warren Levy checked in various patches that provide much a more compatible
+serialization implementation.  Still some special case classes to go, but
+90% of the serializable classes should now be compatible with Sun's JDK.
+</td></tr>
+
+<tr><td valign="top">
 <b>September 6, 2000</b>
 </td><td>
 Anthony Green checked in a patch to make gcj read compressed zip
@@ -222,7 +230,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.46 2000/08/20 18:45:08 tromey Exp $
+$Id: index.html,v 1.47 2000/09/06 06:30:01 tromey Exp $
 </small>
 </address>
 
