--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,19 @@ home page</a>.
 
 <dl>
 
+<dt><b>April 30, 2000</b></dt>
+<dd>
+Michael Meissner and Nick Clifton of Cygnus, a Red Hat company, have
+contributed a port for the Mitsubishi D30V processor.
+
+<p>Michael Meissner and Richard Henderson of Cygnus, a Red Hat company,
+have contributed a new if-conversion pass.  The code runs faster and
+identifies more optimization opportunities than the old code.  In
+addition, it also has support for conditional (predicated) execution,
+such as is found in the Intel IA-64 architecture, the ARM processors,
+and numerous embedded LIW and DSP parts.</p>
+</dd>
+
 <dt><b>March 22, 2000</b></dt>
 <dd>
 The Steering Committee has appointed Mark Mitchell, of <a
