--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -334,7 +334,12 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://www.fortran.com/info.html">Fortran FAQs, books and software</a>
 
-  <li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">New compiler book</a>.  Online appendix includes some compiler links.
+  <li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">Steven
+  Muchnick (1997) "Advanced Compiler Design and Implementation</a>.
+  880pp. Online appendix includes some compiler links.
+
+  <li><a href="http://www.bh.com/digitalpress/">Robert Morgan (1998)
+  "Building an Optimizing Compiler"</a> 300pp. ISBN: 1-55558-179-X.
 
   <li><a href="http://www.opengroup.org/">The Open Group</a> has quite a bit
   on POSIX etc.
