Fix a typo.  Remove formatting fix needs. By Kazu Hirata <kazu@hxi.com>.

--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -30,13 +30,11 @@ proper, and some compiler support is needed for the new library
 features.  An <a href="c99status.html">overview</a> of the C99
 implementation status is available.</p>
 
-<h2>Haifa scheduler</h2> (haifa-sched.c, loop.[ch], unroll.[ch], genattrtab.c):
+<h2>Haifa scheduler</h2> (haifa-sched.c, loop.[ch], unroll.c, genattrtab.c):
 (contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> before
 starting any serious haifa work)
 
 <ul>
-  <li>Fix all the formatting problems.  Simple, mindless work.
-
   <li>Fix/add comments throughout the code.  Many of the comments are
   from the old scheduler and are out of date and misleading.  Many new
   hunks of code don't have sufficient comments and documentation.
