Fix use of & in links in previous commit.

--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -139,7 +139,7 @@ obsolete given the new C99 formats and macros.)</li>
 <li>Wide string format support.</li>
 
 <li>Fix <code>format-va-1.c</code> (see <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&pr=479&database=gcc">PR
+href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&amp;pr=479&amp;database=gcc">PR
 c/479</a>).</li>
 
 <li>Handle format attributes on function pointers and typedefs; see <a
